# opencv-rs-demo

./: '  Cargo.toml  Makefile  README.md  flake.nix  shell.nix
.github/workflows/: action.yml
src/: main.rs
