[package]
name = "opencv-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ndarray = "0.16"
opencv = "0.94"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "git-action-test"
path = "src/bin/git-action-test.rs"

[[bin]]
name = "window"
path = "src/bin/window.rs"

[[bin]]
name = "mouse"
path = "src/bin/mouse.rs"

[[bin]]
name = "trackbar"
path = "src/bin/trackbar.rs"

[[bin]]
name = "img-write"
path = "src/bin/img-write.rs"

[[bin]]
name = "camera"
path = "src/bin/camera.rs"

[[bin]]
name = "play-mp4"
path = "src/bin/play-mp4.rs"

[[bin]]
name = "save-camera"
path = "src/bin/save-camera.rs"

[[bin]]
name = "color-space"
path = "src/bin/color-space.rs"

[[bin]]
name = "ndarray-demo"
path = "src/bin/ndarray-demo.rs"

[[bin]]
name = "split-merge-img"
path = "src/bin/split-merge-img.rs"

[[bin]]
name = "draw-line"
path = "src/bin/draw-line.rs"

[[bin]]
name = "draw-rectangle"
path = "src/bin/draw-rectangle.rs"

[[bin]]
name = "draw-circle"
path = "src/bin/draw-circle.rs"

[[bin]]
name = "draw-ellipse"
path = "src/bin/draw-ellipse.rs"

[[bin]]
name = "draw-polylines"
path = "src/bin/draw-polylines.rs"

[[bin]]
name = "draw-text"
path = "src/bin/draw-text.rs"
