[package]
name = "opencv-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ndarray = "0.16"
opencv = "0.94"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "git-action-test"
path = "src/bin/git-action-test.rs"

[[bin]]
name = "window"
path = "src/bin/window.rs"

[[bin]]
name = "mouse"
path = "src/bin/mouse.rs"

[[bin]]
name = "trackbar"
path = "src/bin/trackbar.rs"

[[bin]]
name = "img-write"
path = "src/bin/img-write.rs"

[[bin]]
name = "camera"
path = "src/bin/camera.rs"

[[bin]]
name = "play-mp4"
path = "src/bin/play-mp4.rs"

[[bin]]
name = "save-camera"
path = "src/bin/save-camera.rs"

[[bin]]
name = "color-space"
path = "src/bin/color-space.rs"

[[bin]]
name = "ndarray-demo"
path = "src/bin/ndarray-demo.rs"

[[bin]]
name = "split-merge-img"
path = "src/bin/split-merge-img.rs"

[[bin]]
name = "draw-line"
path = "src/bin/draw-line.rs"

[[bin]]
name = "draw-rectangle"
path = "src/bin/draw-rectangle.rs"

[[bin]]
name = "draw-circle"
path = "src/bin/draw-circle.rs"

[[bin]]
name = "draw-ellipse"
path = "src/bin/draw-ellipse.rs"

[[bin]]
name = "draw-polylines"
path = "src/bin/draw-polylines.rs"

[[bin]]
name = "draw-text"
path = "src/bin/draw-text.rs"

[[bin]]
name = "draw-shape"
path = "src/bin/draw-shape.rs"

[[bin]]
name = "imgadd"
path = "src/bin/imgadd.rs"

[[bin]]
name = "imgsub"
path = "src/bin/imgsub.rs"

[[bin]]
name = "imgmerge"
path = "src/bin/imgmerge.rs"

[[bin]]
name = "img-roi-merge"
path = "src/bin/img-roi-merge.rs"

[[bin]]
name = "imgcat"
path = "src/bin/imgcat.rs"

[[bin]]
name = "img-bitwise-not"
path = "src/bin/img-bitwise-not.rs"

[[bin]]
name = "img-bitwise-and"
path = "src/bin/img-bitwise-and.rs"

[[bin]]
name = "img-bitwise-or"
path = "src/bin/img-bitwise-or.rs"

[[bin]]
name = "img-bitwise-xor"
path = "src/bin/img-bitwise-xor.rs"

[[bin]]
name = "img-resize"
path = "src/bin/img-resize.rs"

[[bin]]
name = "img-logo"
path = "src/bin/img-logo.rs"

[[bin]]
name = "img-flip"
path = "src/bin/img-flip.rs"

[[bin]]
name = "img-rotate"
path = "src/bin/img-rotate.rs"

[[bin]]
name = "img-affine"
path = "src/bin/img-affine.rs"

[[bin]]
name = "img-affine-rotation"
path = "src/bin/img-affine-rotation.rs"

[[bin]]
name = "img-affine-transform"
path = "src/bin/img-affine-transform.rs"

[[bin]]
name = "img-perspective"
path = "src/bin/img-perspective.rs"

[[bin]]
name = "img-filter-blur"
path = "src/bin/img-filter-blur.rs"

[[bin]]
name = "img-blur"
path = "src/bin/img-blur.rs"

[[bin]]
name = "img-gaussian-blur"
path = "src/bin/img-gaussian-blur.rs"

[[bin]]
name = "img-median-blur"
path = "src/bin/img-median-blur.rs"
