[package]
name = "opencv-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ndarray = "0.16"
opencv = "0.94"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "git-action-test"
path = "src/bin/git-action-test.rs"

[[bin]]
name = "window"
path = "src/bin/window.rs"

[[bin]]
name = "mouse"
path = "src/bin/mouse.rs"

[[bin]]
name = "trackbar"
path = "src/bin/trackbar.rs"

[[bin]]
name = "img-write"
path = "src/bin/img-write.rs"

[[bin]]
name = "camera"
path = "src/bin/camera.rs"

[[bin]]
name = "play-mp4"
path = "src/bin/play-mp4.rs"

[[bin]]
name = "save-camera"
path = "src/bin/save-camera.rs"

[[bin]]
name = "color-space"
path = "src/bin/color-space.rs"

[[bin]]
name = "ndarray-demo"
path = "src/bin/ndarray-demo.rs"

[[bin]]
name = "split-merge-img"
path = "src/bin/split-merge-img.rs"

[[bin]]
name = "draw-line"
path = "src/bin/draw-line.rs"

[[bin]]
name = "draw-rectangle"
path = "src/bin/draw-rectangle.rs"

[[bin]]
name = "draw-circle"
path = "src/bin/draw-circle.rs"

[[bin]]
name = "draw-ellipse"
path = "src/bin/draw-ellipse.rs"

[[bin]]
name = "draw-polylines"
path = "src/bin/draw-polylines.rs"

[[bin]]
name = "draw-text"
path = "src/bin/draw-text.rs"

[[bin]]
name = "draw-shape"
path = "src/bin/draw-shape.rs"

[[bin]]
name = "imgadd"
path = "src/bin/imgadd.rs"

[[bin]]
name = "imgsub"
path = "src/bin/imgsub.rs"

[[bin]]
name = "imgmerge"
path = "src/bin/imgmerge.rs"

[[bin]]
name = "img-roi-merge"
path = "src/bin/img-roi-merge.rs"

[[bin]]
name = "imgcat"
path = "src/bin/imgcat.rs"

[[bin]]
name = "img-bitwise-not"
path = "src/bin/img-bitwise-not.rs"

[[bin]]
name = "img-bitwise-and"
path = "src/bin/img-bitwise-and.rs"

[[bin]]
name = "img-bitwise-or"
path = "src/bin/img-bitwise-or.rs"

[[bin]]
name = "img-bitwise-xor"
path = "src/bin/img-bitwise-xor.rs"

[[bin]]
name = "img-resize"
path = "src/bin/img-resize.rs"

[[bin]]
name = "img-logo"
path = "src/bin/img-logo.rs"

[[bin]]
name = "img-flip"
path = "src/bin/img-flip.rs"

[[bin]]
name = "img-rotate"
path = "src/bin/img-rotate.rs"

[[bin]]
name = "img-affine"
path = "src/bin/img-affine.rs"

[[bin]]
name = "img-affine-rotation"
path = "src/bin/img-affine-rotation.rs"

[[bin]]
name = "img-affine-transform"
path = "src/bin/img-affine-transform.rs"

[[bin]]
name = "img-perspective"
path = "src/bin/img-perspective.rs"

[[bin]]
name = "img-filter-blur"
path = "src/bin/img-filter-blur.rs"

[[bin]]
name = "img-blur"
path = "src/bin/img-blur.rs"

[[bin]]
name = "img-gaussian-blur"
path = "src/bin/img-gaussian-blur.rs"

[[bin]]
name = "img-median-blur"
path = "src/bin/img-median-blur.rs"

[[bin]]
name = "img-bilateral-filter"
path = "src/bin/img-bilateral-filter.rs"

[[bin]]
name = "img-sobel"
path = "src/bin/img-sobel.rs"

[[bin]]
name = "img-scharr"
path = "src/bin/img-scharr.rs"

[[bin]]
name = "img-laplacian"
path = "src/bin/img-laplacian.rs"

[[bin]]
name = "img-canny"
path = "src/bin/img-canny.rs"

[[bin]]
name = "img-threshold"
path = "src/bin/img-threshold.rs"

[[bin]]
name = "img-adaptive-threshold"
path = "src/bin/img-adaptive-threshold.rs"

[[bin]]
name = "img-adaptive-threshold2"
path = "src/bin/img-adaptive-threshold2.rs"

[[bin]]
name = "img-erode"
path = "src/bin/img-erode.rs"

[[bin]]
name = "img-erode2"
path = "src/bin/img-erode2.rs"

[[bin]]
name = "img-dilate"
path = "src/bin/img-dilate.rs"

[[bin]]
name = "img-morphology-open"
path = "src/bin/img-morphology-open.rs"

[[bin]]
name = "img-morphology-close"
path = "src/bin/img-morphology-close.rs"

[[bin]]
name = "img-morphology-gradient"
path = "src/bin/img-morphology-gradient.rs"

[[bin]]
name = "img-morphology-tophat"
path = "src/bin/img-morphology-tophat.rs"

[[bin]]
name = "img-morphology-blackhat"
path = "src/bin/img-morphology-blackhat.rs"

[[bin]]
name = "img-contours"
path = "src/bin/img-contours.rs"

[[bin]]
name = "img-contour-area"
path = "src/bin/img-contour-area.rs"

[[bin]]
name = "img-contour-arclength"
path = "src/bin/img-contour-arclength.rs"

[[bin]]
name = "img-approx-hull"
path = "src/bin/img-approx-hull.rs"

[[bin]]
name = "img-minarea"
path = "src/bin/img-minarea.rs"

[[bin]]
name = "img-bounding-rect"
path = "src/bin/img-bounding-rect.rs"

[[bin]]
name = "car-detection"
path = "src/bin/car-detection.rs"

[[bin]]
name = "img-corner-harris"
path = "src/bin/img-corner-harris.rs"

[[bin]]
name = "img-good-features-to-track"
path = "src/bin/img-good-features-to-track.rs"

[[bin]]
name = "img-sift"
path = "src/bin/img-sift.rs"

[[bin]]
name = "img-sift-descriptor"
path = "src/bin/img-sift-descriptor.rs"

[[bin]]
name = "img-surf-descriptor"
path = "src/bin/img-surf-descriptor.rs"

[[bin]]
name = "img-orb-descriptor"
path = "src/bin/img-orb-descriptor.rs"

[[bin]]
name = "img-bfmatcher"
path = "src/bin/img-bfmatcher.rs"

[[bin]]
name = "img-flann-base-matcher"
path = "src/bin/img-flann-base-matcher.rs"

[[bin]]
name = "img-draw-match-object"
path = "src/bin/img-draw-match-object.rs"

[[bin]]
name = "img-joint"
path = "src/bin/img-joint.rs"

[[bin]]
name = "img-watershed"
path = "src/bin/img-watershed.rs"

[[bin]]
name = "img-grabcut"
path = "src/bin/img-grabcut.rs"

[[bin]]
name = "img-meanshift"
path = "src/bin/img-meanshift.rs"

[[bin]]
name = "video-mog"
path = "src/bin/video-mog.rs"

[[bin]]
name = "video-mog2"
path = "src/bin/video-mog2.rs"

[[bin]]
name = "video-gmg"
path = "src/bin/video-gmg.rs"

[[bin]]
name = "img-inpaint"
path = "src/bin/img-inpaint.rs"

[[bin]]
name = "img-haar-face"
path = "src/bin/img-haar-face.rs"

[[bin]]
name = "img-haar-all"
path = "src/bin/img-haar-all.rs"

[[bin]]
name = "img-haar-car-number"
path = "src/bin/img-haar-car-number.rs"

[[bin]]
name = "img-dnn-classifier"
path = "src/bin/img-dnn-classifier.rs"

[[bin]]
name = "camera-face-detection"
path = "src/bin/camera-face-detection.rs"
